--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   window_manager: ^0.3.5
+  bitsdojo_window: ^0.1.5
 
 dev_dependencies:
   flutter_test:
