--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   window_manager: ^0.3.5
   bitsdojo_window: ^0.1.5
+  flutter_acrylic: ^1.1.3
 
 dev_dependencies:
   flutter_test:
