--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   window_manager: ^0.3.5
   bitsdojo_window: ^0.1.5
   provider: ^6.0.5
+  dartdoc: ^6.2.2
+  flutter_acrylic: ^1.1.3
 
 dev_dependencies:
   flutter_test:
@@ -61,11 +63,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+    # To add assets to your application, add an assets section, like this:
+assets:
+  - assets/settings.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
