--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   provider: ^6.0.5
   dartdoc: ^6.2.2
   flutter_acrylic: ^1.1.3
-
+  shared_preferences: ^2.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
