--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.2.1
   get: ^4.6.6
   mockito: ^5.4.2
+  keybinder: ^1.0.1
+  hotkey_manager: ^0.1.8
 
 
 dev_dependencies:
