--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   hotkey_manager: ^0.1.1
   path_provider: ^2.1.1
   easy_debounce: ^2.0.3
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
