--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ flutter:
     # To add assets to your application, add an assets section, like this:
   assets:
     - assets/settings/junction.json
+    - assets/history.json
+    - assets/executable.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
