Added junction prop setting model in junction_widget_settings_repository.dart Added read and initialize junction prop setting file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/settings/junction.json
     - assets/history.json
     - assets/executable.json
+    - assets/data/data.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
