added support for searching windows executable

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   easy_debounce: ^2.0.3
   io: ^1.0.4
   fuzzy: ^0.5.1
+  win32: ^5.2.0
+  win32_registry: ^1.1.2
 
 dev_dependencies:
   flutter_test:
